Changed navbar from flex to grid - solved layout issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@ a {
     color: var(--text-color);
 }
 
-.navbar {
+/* .navbar {
     height: var(--nave-size);
     background-color: var(--bg);
     padding: 0 1rem;
@@ -38,8 +38,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;;
-}
-.icon-button {
+} */
+/* .icon-button {
     --button-size: calc(var(--nav-size) * .5);
     width: var(--button-size);
     height: var(--button-size);
@@ -59,8 +59,8 @@ a {
     fill: var(--text-color);
     width: 20px;
     height: 20px;
-}
-
+} */
+/* 
 .dropdown {
     position: absolute;
     top: 58px;
@@ -87,4 +87,4 @@ a {
 }
 .icon-right{
     margin-left: auto;
-}
+} */
