--- a/src/styles/socials.module.css
+++ b/src/styles/socials.module.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  
+ 
+ 
   
   
 
@@ -11,7 +12,7 @@
 .socialIcon {
   width: 1.2rem;
   height: 1.5rem;
- 
+  margin-bottom: -5px;
   fill: white;
   color: white;
 }
